tools/clang/iterator_checker/tests/invalidate-all-iterators.txt
invalidate-all-iterators.cpp:20:6: error: [iterator-checker] Potentially invalid iterator used.
    *it1 = 1;
     ^
invalidate-all-iterators.cpp:21:6: error: [iterator-checker] Potentially invalid iterator used.
    *it2 = 2;
     ^
invalidate-all-iterators.cpp:22:6: error: [iterator-checker] Potentially invalid iterator used.
    *it3 = 3;
     ^
3 errors generated.
